--- a/templates/academy.html
+++ b/templates/academy.html
@@ -123,7 +123,28 @@
             </div>
 
         </div>
-        <div id="center"></div>
+        <div id="center">
+            <div id="center_about">
+                <div id="about_left">
+                    <div id="Blockchain_Crypto">
+                        <div id="all_about"><b>LEARN ALL ABOUT</b></div>
+                        <div id="Blockchain"><b>Blockchain & Crypto</b></div>
+                        <div id="line"></div>
+                        <div id="text">Your one-stop guide to all things crypto. Whether you're a rookie trying to understand mining or a veteran looking to develop a trading strategy, we've got you covered.</div>
+                        <div id="about_start">
+                            <div id="start_here_1">
+                                <a href="">
+                                    <p>Start here</p>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="about_right">
+
+                </div>
+            </div>
+        </div>
         <div id="below"></div>
     </div>
 </body>
