--- a/templates/academy.html
+++ b/templates/academy.html
@@ -158,6 +158,10 @@
                                 <p>5m</p>
                             </div>
                         </div>
+                        <div id="intermediate">
+                            <div id="dot"></div>
+                            <div>Intermediate</div>
+                        </div>
                     </div>
                 </div>
             </div>
