--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -692,6 +692,30 @@
                     </div>
                     <a href="" class="get-start" style="margin-top: 16px;">Start Now</a>
                 </div>
+                <div class="content9-container">
+                    <div class="top">
+                        <div class="left">
+                            <div class="h1">Trade on the go. Anywhere, anytime. </div>
+                            <div class="h5" style="">Stay in the know with our app and desktop client.</div>
+                        </div>
+                        <div class="right">
+                            <a href="" style="color: #848E9C; display: flex; align-items: center;" >
+                                More download options
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="svg-better-than">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z"
+                                        fill="currentColor"></path>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="content9">
+                        <div class="left">
+                            <img src="../static/img/homepage/content9-leftground.webp" alt="" width="600">
+                        </div>
+                        <div class="right"></div>
+                    </div>
+                </div>
             </main>
             <footer></footer>
         </div>
