Homepage: Content11 - Update html, css and add demo35 - content11 was finished with a title and sign up button

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -937,6 +937,12 @@
                         </div>
                     </div>
                 </div>
+                <div class="content11-container">
+                    <div class="content11">
+                        <div class="h1">Start earning today</div>
+                        <a href="" class="get-start">Sign Up Now</a>
+                    </div>
+                </div>
             </main>
             <footer></footer>
         </div>
