--- a/static/css/homepage.css
+++ b/static/css/homepage.css
@@ -1167,3 +1167,20 @@ a.crypto {
     margin-top: 16px;
     align-items: flex-start;
 }
+
+.content11-container{
+    padding: 80px 0;
+    background-color: #0B0E11;
+    box-sizing: border-box;
+}
+.content11{
+    margin: 0 96px;
+    padding: 0 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.content11 .get-start{
+    margin-top: 40px;
+}
