Academy:Update html,css-add_align-add-img_beginner-item_3, demo_academy_hinh10...

--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -461,6 +461,178 @@ html body {
     width: 8px;
 }
 
+#latest_releases {
+    width: 100%;
+    height: 944px;
+    display: flex;
+    justify-content: center;
+}
+
+#center_LR {
+    width: 1100px;
+    height: 944px;
+    max-width: 1136px;
+    padding: 56px 10px;
+}
+
+#conten_LR {
+    width: 100%;
+    height: 28px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+#latest_r {
+    margin-top: 2.2px;
+    font-size: 19.5px;
+    color: rgb(230, 232, 234);
+}
+
+.see_all {
+    color: rgb(230, 232, 234);
+    line-height: 1.45;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 11px;
+}
+
+#see_LR a {
+    width: 175px;
+    height: 24px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    align-items: center;
+    border: 0.5px solid transparent;
+    border-radius: 4px;
+    justify-content: center;
+    white-space: nowrap;
+    outline: 0px;
+    line-height: 14px;
+    padding-left: 8px;
+    padding-right: 8px;
+    background-color: rgb(43, 47, 54);
+    color: rgb(255, 255, 255);
+}
+
+.element {
+    width: 24px;
+    height: 24px;
+}
+
+.beginner {
+    width: 100%;
+    height: 764px;
+}
+
+.clone_1 {
+    width: 100%;
+    height: 370px;
+}
+
+.item_3 {
+    width: 352px;
+    height: 100%;
+    background-color: rgb(43, 47, 54);
+    border-radius: 16px;
+}
+
+.item_3 a {
+    text-decoration: none;
+}
+
+.conten_1 {
+    height: 100%;
+    position: relative;
+}
+
+.conten_1 img {
+    width: 352px;
+    margin-bottom: 21px;
+    border-radius: 16px;
+}
+
+.notice {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 8px;
+    position: absolute;
+    border: 1 solid #ffc970;
+    border-radius: 40px;
+    left: 24px;
+    top: 12px;
+    font-size: 12px;
+    padding: 7px;
+    background-color: rgb(250, 250, 250);
+    color: rgb(20, 21, 26);
+}
+
+.nft {
+    margin: 0px;
+    display: flex;
+    color: rgb(230, 232, 234);
+    margin-bottom: 24px;
+    min-height: 56px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 28px;
+    padding-left: 24px;
+}
+
+.date_time_1 {
+    height: 55px;
+    margin: 5px 0px;
+    color: rgb(146, 154, 165);
+    display: flex;
+    align-items: center;
+    padding-left: 24px;
+}
+
+.date_1 {
+    font-size: 15.5px;
+    margin-left: 15px;
+}
+
+.d_time {
+    display: flex;
+    align-items: center;
+    margin-left: 15px;
+}
+
+.time_2 {
+    vertical-align: middle;
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
+}
+
+.d_time p {
+    font-size: 15px;
+}
+
+.beginner_text {
+    width: 60px;
+    align-items: center;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    padding: 0px 8px;
+    font-size: 12px;
+    height: 28px;
+    background-color: rgba(46, 209, 145, 0.3);
+    color: rgb(255, 255, 255);
+}
+
+#dot_1 {
+    background-color: rgb(2, 192, 118);
+    border-radius: 50%;
+    height: 6px;
+    width: 6px;
+}
+
 #below {
     width: 100%;
     height: 524.69px;
