Homepage: Footer - Update html, css and add demo36 - add remaining sections and community

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1114,7 +1114,85 @@
                             <a href="#">Cookie Preferences</a>
                         </div>
                     </div>
-                    
+                    <div class="section">
+                        <div class="topic">Products</div>
+                        <div class="links">
+                            <a href="#">Exchange</a>
+                            <a href="#">Academy</a>
+                            <a href="#">Binance Live</a>
+                            <a href="#">Charity</a>
+                            <a href="#">Card</a>
+                            <a href="#">Labs</a>
+                            <a href="#">Launchpad</a>
+                            <a href="#">Research</a>
+                            <a href="#">Trust Wallet</a>
+                            <a href="#">NFT</a>
+                            <a href="#">Binance Pay</a>
+                            <a href="#">Binance Gift Card</a>
+                            <a href="#">BABT</a>
+                        </div>
+                    </div>
+                    <div class="section">
+                        <div class="topic">Service</div>
+                        <div class="links">
+                            <a href="#">Service</a>
+                            <a href="#">Downloads</a>
+                            <a href="#">Desktop Application</a>
+                            <a href="#">Buy Crypto</a>
+                            <a href="#">Institutional &amp; VIP Services</a>
+                            <a href="#">OTC Trading</a>
+                            <a href="#">Referral</a>
+                            <a href="#">Affiliate</a>
+                            <a href="#">BNB</a>
+                            <a href="#">Listing Application</a>
+                            <a href="#">P2P Merchant Application</a>
+                            <a href="#">P2Pro Merchant Application</a>
+                            <a href="#">Historical Market Data</a>
+                            <a href="#">Proof of Reserves</a>
+                        </div>
+                    </div>
+                    <div class="section">
+                        <div class="topic">Support</div>
+                        <div class="links">
+                            <a href="#">Request a Feature</a>
+                            <a href="#">Support Center</a>
+                            <a href="#">24/7 Chat Support</a>
+                            <a href="#">APIs</a>
+                            <a href="#">Fees</a>
+                            <a href="#">Trading Rules</a>
+                            <a href="#">Binance Verify</a>
+                            <a href="#">Law Enforcement Requests</a>
+                            <a href="#">Binance Legal (Court Orders)</a>
+                            <a href="#">Binance Airdrop Portal</a>
+                        </div>
+                    </div>
+                    <div class="section">
+                        <div class="topic">Learn</div>
+                        <div class="links">
+                            <a href="#">Learn &amp; Earn</a>
+                            <a href="#">Browse Crypto Prices</a>
+                            <a href="#">Bitcoin Price</a>
+                            <a href="#">Ethereum Price</a>
+                            <a href="#">Buy BNB</a>
+                            <a href="#">Buy BUSD</a>
+                            <a href="#">Buy Bitcoin</a>
+                            <a href="#">Buy Ethereum</a>
+                            <a href="#">Buy Dogecoin</a>
+                            <a href="#">Buy XRP</a>
+                            <a href="#">Buy Tradable Altcoins</a>
+                        </div>
+                    </div>
+                    <div class="section" style="margin-left: 16px; padding: 0;">
+                        <div class="topic">Community</div>
+                        <div class="community">
+                            <a href=""><i class="fa fa-telegram" aria-hidden="true"></i></a>
+                            <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>    
+                            <a href=""> <i class="fa fa-twitter" aria-hidden="true"></i></a>   
+                            <a href=""><i class="fa fa-reddit" aria-hidden="true"></i></a>    
+                            <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>    
+                            <a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a> 
+                        </div>
+                    </div>
                 </div>
                 
             </footer>
