Homepage: Footer - Update html, css and add demo37 - add coppyright and finish footer

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1194,7 +1194,9 @@
                         </div>
                     </div>
                 </div>
-                
+                <div class="coppyright">
+                    <div>Binance © 2023</div>
+                </div>
             </footer>
         </div>
     </div>
