--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -543,6 +543,10 @@ html body {
     border-radius: 16px;
 }
 
+.item_3:hover {
+    box-shadow: 0 0 20px #00000059, 0 0 30px rgba(0, 0, 0, 0.184), 0 0 35px rgba(0, 0, 0, 0.058), 0 0 45px rgba(0, 0, 0, 0.03);
+}
+
 .item_3 a {
     text-decoration: none;
 }
@@ -550,6 +554,10 @@ html body {
 .conten_1 {
     height: 100%;
     position: relative;
+}
+
+#glossary:hover {
+    box-shadow: 0 0 15px #00000059, 0 0 15px rgba(0, 0, 0, 0.184), 0 0 25px rgba(0, 0, 0, 0.058), 0 0 45px rgba(21, 21, 21, 0.03);
 }
 
 .conten_1 img {
