--- a/templates/academy.html
+++ b/templates/academy.html
@@ -325,7 +325,24 @@
                             </div>
                         </div>
                     </div>
+
                 </div>
+            </div>
+            <div id="get_started">
+                <div id="item_GS">
+                    <div id="text_GS">
+                        <div id="earn"><b>Earn crypto by learning about blockchain</b></div>
+                        <div id="build"><b>Build your blockchain knowledge, complete quizzes, and earn free crypto.</b></div>
+                        <div id="start_1">
+                            <a href="">
+                                <p>Get Started</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div>
+
             </div>
         </div>
         <div id="below"></div>
