--- a/templates/academy.html
+++ b/templates/academy.html
@@ -332,7 +332,7 @@
                 <div id="item_GS">
                     <div id="text_GS">
                         <div id="earn"><b>Earn crypto by learning about blockchain</b></div>
-                        <div id="build"><b>Build your blockchain knowledge, complete quizzes, and earn free crypto.</b></div>
+                        <div id="build">Build your blockchain knowledge, complete quizzes, and earn free crypto.</div>
                         <div id="start_1">
                             <a href="">
                                 <p>Get Started</p>
