--- a/templates/academy.html
+++ b/templates/academy.html
@@ -339,6 +339,31 @@
                             </a>
                         </div>
                     </div>
+                    <div id="item_img">
+                        <svg viewBox="0 0 548 308" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_5080_132575)">
+                                <path opacity="0.2" d="M190.187 208.965H337.89V281.79H190.187V208.965Z" fill="url(#paint0_linear_5080_132575)"></path>
+                                <path opacity="0.2" d="M171 93.4902H373.508V148.609H171V93.4902Z" fill="url(#paint1_linear_5080_132575)"></path>
+                                <path opacity="0.2" d="M176.197 48.7578H390.335V82.0091H176.197V48.7578Z" fill="url(#paint2_linear_5080_132575)"></path>
+                                <path d="M354.145 165.019L349.314 169.846L344.484 165.019L349.314 160.193L354.145 165.019Z" fill="#328DFD"></path>
+                                <path d="M248.948 208.798L252.022 205.727L255.095 208.798L252.022 211.869L248.948 208.798Z" fill="white"></path>
+                                <path d="M484.042 188.083L489.97 182.16L495.898 188.083L489.97 194.007L484.042 188.083Z" fill="#F0B90B"></path>
+                                <path d="M307.18 126.974L313.108 121.051L319.036 126.974L313.108 132.897L307.18 126.974Z" fill="white"></path>
+                                <path d="M341.687 28.7751L350.469 20L359.251 28.7751L350.469 37.5502L341.687 28.7751Z" fill="#F0B90B"></path>
+                                <path d="M465.603 199.712L468.677 196.641L471.751 199.712L468.677 202.783L465.603 199.712Z" fill="#FF7E0D"></path>
+                                <path d="M210.574 148.253L213.648 145.182L216.722 148.253L213.648 151.324L210.574 148.253Z" fill="#FF7E0D"></path>
+                                <path d="M440.82 69.0836L444.772 65.1348L448.724 69.0836L444.772 73.0323L440.82 69.0836Z" fill="#FF7E0D"></path>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M354.384 93.2808L341.598 93.283C341.447 93.283 341.301 93.2228 341.194 93.1155L319.723 71.6622L306.951 84.4233L328.422 105.877C331.917 109.369 336.658 111.331 341.602 111.33L354.387 111.328L354.384 93.2808Z" fill="#FFBEA6"></path>
+                                <path d="M296.915 60.7188L309.687 73.4799L322.458 60.7187L309.687 47.9576L296.915 60.7188Z" fill="#FFBEA6"></path>
+                                
+                                <path></path>
+                                <path></path>
+                                <path></path>
+                                <path></path>
+
+                            </g>
+                        </svg>
+                    </div>
                 </div>
             </div>
             <div>
