--- a/templates/academy.html
+++ b/templates/academy.html
@@ -355,7 +355,60 @@
                                 <path d="M440.82 69.0836L444.772 65.1348L448.724 69.0836L444.772 73.0323L440.82 69.0836Z" fill="#FF7E0D"></path>
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M354.384 93.2808L341.598 93.283C341.447 93.283 341.301 93.2228 341.194 93.1155L319.723 71.6622L306.951 84.4233L328.422 105.877C331.917 109.369 336.658 111.331 341.602 111.33L354.387 111.328L354.384 93.2808Z" fill="#FFBEA6"></path>
                                 <path d="M296.915 60.7188L309.687 73.4799L322.458 60.7187L309.687 47.9576L296.915 60.7188Z" fill="#FFBEA6"></path>
+                                <path d="M384.079 228.695L383.125 182.882" stroke="#FFBEA6" stroke-width="16.8091"></path>
+                                <path d="M418.751 155.427L400.882 155.366L371.946 155.266" stroke="#328DFD" stroke-width="24.1987"></path>
+                                <path d="M434.99 223.604L434.683 186.817C434.676 185.981 434.341 185.182 433.75 184.591L412.702 163.561" stroke="#FFBEA6" stroke-width="16.8091"></path>
+                                <path d="M408.091 143.019L408.091 158.329C408.091 160.819 409.059 163.211 410.789 165.001L429.159 184.003" stroke="#328DFD" stroke-width="24.1987"></path>
+                                <g style="mix-blend-mode: soft-light;"><path fill-rule="evenodd" clip-rule="evenodd" d="M420.048 143.027V157.333L437.719 175.612L420.314 192.411L401.943 173.408C400.24 171.646 398.865 169.627 397.854 167.445L371.904 167.356L371.988 143.177L395.849 143.259V143.027H420.048Z" fill="#14151A"></path></g>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M437.044 110.833L484.965 110.833L484.965 92.786L437.044 92.786L437.044 110.833Z" fill="#FFBEA6"></path>
+                                <g opacity="0.6" style="mix-blend-mode: soft-light;"><path fill-rule="evenodd" clip-rule="evenodd" d="M437.044 110.833L484.965 110.833L484.965 92.786L437.044 92.786L437.044 110.833Z" fill="url(#paint4_linear_5080_132575)"></path></g>
+                                <path d="M503.456 115.484L516.228 102.723L503.456 89.962L490.685 102.723L503.456 115.484Z" fill="#FFBEA6"></path>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M369.779 92.3291L342.411 92.3291L342.411 112.954H369.779L369.779 92.3291Z" fill="#02C076"></path>
+                                <g opacity="0.6" style="mix-blend-mode: soft-light;"><path fill-rule="evenodd" clip-rule="evenodd" d="M369.779 92.3291L342.411 92.3291L342.411 112.954H369.779L369.779 92.3291Z" fill="url(#paint5_linear_5080_132575)"></path></g>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M420.975 112.847L444.931 112.847L444.931 92.222L420.975 92.2219L420.975 112.847Z" fill="#02C076"></path>
+                                <g opacity="0.6" style="mix-blend-mode: soft-light;"><path fill-rule="evenodd" clip-rule="evenodd" d="M420.975 112.847L444.931 112.847L444.931 92.222L420.975 92.2219L420.975 112.847Z" fill="url(#paint6_linear_5080_132575)"></path></g>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M403.169 92.2637L393.145 102.259L383.121 92.2637L368.309 92.2637L368.309 150.6L425.074 150.809L425.074 92.2637L403.169 92.2637Z" fill="#02C076"></path>
+                                <path d="M402.982 79.7675C411.003 75.1404 413.751 64.8925 409.12 56.8781C404.49 48.8638 394.233 46.1179 386.213 50.745C378.192 55.372 375.443 65.62 380.074 73.6343C384.705 81.6487 394.961 84.3946 402.982 79.7675Z" fill="#FFBEA6"></path>
+                                <path d="M380.074 73.6343C375.443 65.62 378.195 55.3702 386.213 50.745C394.23 46.1197 404.49 48.8638 409.12 56.8781L380.074 73.6343Z" fill="#935A30"></path>
+                                <path d="M276.696 256.615H383.06L358.5 232.123H252.136L281.783 244.369L276.696 256.615Z" fill="#328DFD"></path>
+                                <path d="M288.237 208.92H449.502L499.171 258.549V262.416L449.502 212.787H288.237V208.92Z" fill="#FF7E0D"></path>
+                                <path d="M288.237 232.123H449.502L499.171 281.752H337.906L288.237 232.123Z" fill="#FF7E0D"></path>
+                                <path d="M499.171 281.753L449.502 232.123H299.203H288.882C294.226 232.123 298.558 227.795 298.558 222.455C298.558 217.116 294.226 212.787 288.882 212.787H299.203H449.502L499.171 262.416V281.753Z"  fill="white"></path>
+                                <path d="M449.5 232.123L499.17 281.753V262.416L449.5 212.787V232.123Z" fill="#E6E8EA"></path>
+                                <g opacity="0.6" style="mix-blend-mode: soft-light;"><path d="M288.237 232.123H449.502L499.171 281.752H337.906L288.237 232.123Z" fill="url(#paint7_linear_5080_132575)"></path></g>
+                                <path d="M495.298 258.551H499.168V281.754L495.298 277.887V258.551Z" fill="#FF7E0D"></path>
+                                <g opacity="0.6">
+                                    <path d="M67.8001 193.033C67.8001 193.033 74.7149 194.189 77.136 201.106C79.5571 208.023 71.9821 223.944 52.8505 229.456C42.4649 232.449 36.9075 228.895 33.7732 223.987L67.8001 193.033Z" fill="#D0980B"></path>
+                                    <path d="M70.6409 193.97C77.5494 197.88 75.5972 208.448 66.2805 217.576C56.9638 226.704 43.8107 230.934 36.9021 227.025C29.9935 223.115 31.9458 212.547 41.2624 203.42C50.5789 194.292 63.7324 190.061 70.6409 193.97Z" fill="url(#paint8_linear_5080_132575)"></path>
+                                    <path d="M65.9756 196.653C60.7462 193.682 50.9427 197.221 44.0787 204.559C37.2147 211.897 35.8902 220.255 41.1196 223.227C46.349 226.198 56.1525 222.658 63.0162 215.32C69.8799 207.982 71.2047 199.625 65.9756 196.653ZM62.7006 215.048C55.9561 222.257 46.3524 225.752 41.2503 222.855C36.1482 219.957 37.4793 211.764 44.2237 204.555C50.9682 197.346 60.5719 193.851 65.674 196.749C70.7761 199.646 69.445 207.839 62.7006 215.048Z" fill="#D0980B"></path>
+                                    <g opacity="0.3" style="mix-blend-mode: overlay;">
+                                        <path d="M60.3202 197.014L34.3451 223.779C34.9095 225.187 35.9104 226.353 37.3661 227.176C37.6578 227.341 37.9625 227.489 38.279 227.621L63.6248 197.13C62.5919 196.969 61.4829 196.932 60.3202 197.014Z" fill="url(#paint9_linear_5080_132575)"></path>
+                                    
+                                    </g>
+                                    <g opacity="0.4" style="mix-blend-mode: overlay;">
+                                        <path d="M63.1693 220.239L73.6102 206.796C74.1804 205.113 74.4414 203.503 74.3809 202.033L55.712 224.764C58.2459 223.61 60.7839 222.085 63.1693 220.239Z" fill="url(#paint10_linear_5080_132575)"></path>
+                                    </g>
+                                </g>
                                 
+                                <path d="M206.98 73.5696C206.98 73.5696 208.556 82.3479 218.663 87.6711C228.77 92.9943 252.265 89.3155 260.686 68.0371C265.257 56.4861 260.139 48.5242 252.993 43.0309L206.98 73.5696Z" fill="#D0980B"></path>
+                                <path d="M208.301 77.3344C213.917 87.0562 229.459 88.3416 243.015 80.2053C256.571 72.0691 263.007 57.5923 257.391 47.8703C251.775 38.1483 236.234 36.8631 222.678 44.9993C209.123 53.1354 202.686 67.6126 208.301 77.3344Z" fill="url(#paint11_linear_5080_132575)"></path>
+                                <path d="M212.319 72.608C208.05 65.2447 213.415 54.588 224.302 48.8056C235.189 43.0231 247.476 44.3054 251.745 51.6686C256.014 59.0319 250.65 69.6886 239.762 75.4708C228.875 81.2529 216.589 79.9711 212.319 72.608ZM239.368 74.9941C250.064 69.3118 255.36 58.882 251.197 51.6985C247.034 44.515 234.989 43.2977 224.293 48.9799C213.598 54.6622 208.302 65.0921 212.464 72.2755C216.627 79.459 228.672 80.6764 239.368 74.9941Z" fill="#D0980B"></path>
+                                <g opacity="0.3" style="mix-blend-mode: overlay;">
+                                    <path d="M212.948 65.8813L252.674 43.6525C254.73 44.8228 256.423 46.4383 257.605 48.4867C257.842 48.897 258.054 49.3174 258.242 49.7464L213.061 69.9256C212.842 68.6184 212.808 67.262 212.948 65.8813Z" fill="url(#paint12_linear_5080_132575)"></path>
+                                </g>
+                                <g opacity="0.4" style="mix-blend-mode: overlay;">
+                                    <path d="M246.981 77.3563L227.075 85.3642C224.594 85.4734 222.229 85.2339 220.073 84.6527L253.751 69.8833C252.014 72.5551 249.732 75.1035 246.981 77.3563Z" fill="url(#paint13_linear_5080_132575)"></path>
+                                </g>
+                                <g filter="url(#filter0_d_5080_132575)">
+                                    <path d="M132.005 185.169C102.035 185.169 77.7392 160.893 77.7392 130.947C77.7392 101.002 102.035 76.7259 132.005 76.7259C161.975 76.7259 186.27 101.002 186.27 130.947L186.27 185.169L132.005 185.169Z" fill="url(#paint14_linear_5080_132575)"></path>
+                                </g>
+                                <path d="M117.812 152.994C114.474 149.659 114.474 144.251 117.812 140.916V140.916C121.15 137.581 126.562 137.581 129.9 140.916L135.944 146.955L129.9 152.994C126.562 156.329 121.15 156.329 117.812 152.994V152.994Z" stroke="white" stroke-width="2.80335"></path>
+                                <path d="M154.075 116.762C150.737 113.426 145.325 113.426 141.987 116.762V116.762C138.649 120.097 138.649 125.504 141.987 128.84L148.031 134.878L154.075 128.84C157.413 125.504 157.413 120.097 154.075 116.762V116.762Z" stroke="white" stroke-width="2.80335"></path>
+                                <path d="M135.946 146.959L148.034 134.881L178.394 165.216L166.306 177.294L135.946 146.959Z" stroke="white" stroke-width="2.80335"></path>
+                                <rect stroke-width="2.80335" height="30.2015" transform="matrix(0.707393 -0.70682 0.707393 0.70682 153.37 185.154)" fill="url(#paint15_linear_5080_132575)"></rect>
+                                <path d="M179.233 202.01L203.127 178.135L210.998 186L187.104 209.874L179.233 202.01Z" fill="#474D57"></path>
+                                <path d="M186.824 161.844L162.93 185.719" stroke="#474D57" stroke-width="2.80335"></path>
+                                <path d="M192.444 167.461L168.55 191.336" stroke="#474D57" stroke-width="2.80335"></path>
                                 <path></path>
                                 <path></path>
                                 <path></path>
